--- a/SistemaInventario/Views/Shared/_Layout.cshtml
+++ b/SistemaInventario/Views/Shared/_Layout.cshtml
@@ -112,7 +112,7 @@
                                             else
                                             {
                                                 <a class="dropdown-item" href="https://localhost:44366/Home/Login">Iniciar Sesión</a>
-                                                <a class="dropdown-item" href="https://localhost:44366">Registrarse</a>
+                                                <a class="dropdown-item" href="https://localhost:44366/Home/Registrarse">Registrarse</a>
                                             }
                                         </div>
                                     </li>
