--- a/SistemaInventario/Views/Clientes/AgregarOEditarClientes.cshtml
+++ b/SistemaInventario/Views/Clientes/AgregarOEditarClientes.cshtml
@@ -8,6 +8,7 @@
 @using (Html.BeginForm())
 {
     @Html.HiddenFor(x => x.idCliente)
+    @Html.HiddenFor(x => x.rol, new { @class = "form-control", @Value = "2" })
 <div class="formulario cliente">
     @if (Model.idCliente > 0)
     {
@@ -17,16 +18,7 @@
     {
         <h3>Agregar cliente</h3>
     }
+    @Html.Partial("_ParcialFormularioRegistrarse")+
 
-    <label>Nombre Cliente: </label>
-    @Html.TextBoxFor(x => x.nombre, htmlAttributes: new { @class = "form-control" })
-    @Html.ValidationMessageFor(x => x.nombre, null, htmlAttributes: new { @class = "text-danger" })
-    <label>Teléfono </label>
-    @Html.TextBoxFor(x => x.telefono, new { @class = "form-control" })
-    @Html.ValidationMessageFor(x => x.telefono, null, htmlAttributes: new { @class = "text-danger" })
-    <label>Dirección: </label>
-    @Html.TextBoxFor(x => x.direccion, new { @class = "form-control" })
-    @Html.ValidationMessageFor(x => x.direccion, null, htmlAttributes: new { @class = "text-danger" })
-    <input type="submit" value="Registrar" />
 </div>
 }
