--- a/SistemaInventario/Content/Diseños/tarjetas.css
+++ b/SistemaInventario/Content/Diseños/tarjetas.css
@@ -14,18 +14,19 @@
     justify-content: center;
     margin: auto;
     margin-bottom: 20px;
+    border-radius: 10%;
 }
 
     .containerCards .card {
         background-color: #fff;
         width: 310px;
-        height: 400px;
         border-radius: 8px;
         box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
         overflow: hidden;
         margin: 20px;
         text-align: center;
         transition: all 0.25s;
+        padding-bottom: 10px;
     }
 
         .containerCards .card:hover {
@@ -55,5 +56,4 @@
 
 img {
     width: 100%;
-    border-radius: 20px 20px 0 0;
 }
