Restricción de administradores. No podrán acceder a vistas para clientes

--- a/SistemaInventario/Views/Shared/Error.cshtml
+++ b/SistemaInventario/Views/Shared/Error.cshtml
@@ -6,12 +6,14 @@
 </head>
 <body>
     <br /><br />
-    <center style="color:red">
-        <h1>Su usuario no esta autorizado para acceder a esta página</h1>
-        <br />
-        <img src="https://media0.giphy.com/media/8L0Pky6C83SzkzU55a/giphy.gif" />
-    </center>
-    <br /><br />
-    <a href="/">Ir al inicio</a>
+          <center>
+              <h2>@Session["NombreUsuario"]</h2> <h3 class="text-danger"> Usted no esta autorizado para acceder a esta página</h3>
+              <br />
+              <img src="https://brooksbarn.com/gfx/keine_rechte.png" />
+              <br /><br />
+              <a href="/" class="btn btn-group-justified">Ir al inicio</a>
+          </center>
+   
+    
 </body>
 </html>
