Modicacion de navbar, creacion de metodo imprimir, modificacion de formulario.css.

--- a/SistemaInventario/Content/Diseños/Navbar.css
+++ b/SistemaInventario/Content/Diseños/Navbar.css
@@ -150,16 +150,10 @@
         transition: all 200ms linear;
     }
 
-
 /*::::::::::::::::::::::::::::::::::::::::::::::dropdown::::::::::::::::::::::::::::::::::::::::*/
-
 .fila {
-    width: 100%;
+    width: 125px;
     display: flex;
-}
-
-.columna.2{
-    flex: 30%;
 }
 
 .nav-item .dropdown-menu.card {
