--- a/SistemaInventario/Views/Home/Registrarse.cshtml
+++ b/SistemaInventario/Views/Home/Registrarse.cshtml
@@ -7,7 +7,7 @@
 
     @Html.HiddenFor(x => x.rol, new { @class = "form-control", @Value = "2" })
     @Html.HiddenFor(x => x.estadoCliente, new { @class = "form-control", @Value = "Activo" })
-    <div class="formulario cliente">
+    <div class="formulario usuario">
 
         <h3>Registrarse</h3>
 
